fix issue with lhs sidebar items too big when no webcomponents
Changelog: fixed

--- a/sass/layout/_sidebar-left.scss
+++ b/sass/layout/_sidebar-left.scss
@@ -1306,6 +1306,9 @@ $sidebarOpacityAnimationDuration: 0.15s;
 
 .no-webcomponents {
     #SidebarContainer {
+        .SidebarChannel .SidebarLink {
+            width: 255px !important;
+        }
         width: 255px;
 
         + .inner-wrap #app-content {
